<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/card_corners_white">

    <ImageView
        android:id="@+id/cross_exit_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_exit_cross"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Dialog.Title"
        android:text="@string/for_extra_and_ultra_modes_you_need_access_to_bluetooth_settings"
        app:layout_constraintBottom_toTopOf="@id/body_text"
        app:layout_constraintEnd_toEndOf="@+id/body_text"
        app:layout_constraintStart_toStartOf="@+id/body_text"
        app:layout_constraintTop_toBottomOf="@id/cross_exit_iv" />

    <TextView
        android:id="@+id/body_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/allow_the_app_to_acces_bluetooth_settings_to_increase_battery_life"
        style="@style/Dialog.Description"
        app:layout_constraintBottom_toTopOf="@id/allow_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_text" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/allow_btn"
        android:layout_width="0dp"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:background="@drawable/background_button_allow"
        android:text="@string/further"
        style="@style/Dialog.Button"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/body_text" />

</androidx.constraintlayout.widget.ConstraintLayout>