<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/card_corners_white">

    <ImageView
        android:id="@+id/cross_exit_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_exit_cross"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/heraclito_medium"
        android:text="@string/we_need_permission"
        android:textColor="@color/dark_blue"
        android:textSize="@dimen/Text.16"
        app:layout_constraintBottom_toTopOf="@id/body_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/body_text"
        app:layout_constraintTop_toBottomOf="@id/cross_exit_iv" />

    <TextView
        android:id="@+id/body_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="@font/heraclito_regular"
        android:text="@string/description_permission"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="@dimen/Text.14"
        app:layout_constraintBottom_toTopOf="@id/cancel_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_text" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancel_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_4sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:background="@drawable/background_button_cancel"
        android:fontFamily="@font/heraclito_medium"
        android:text="@string/cancel"
        android:textSize="@dimen/Text.12"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/allow_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/body_text" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/allow_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:background="@drawable/background_button_allow"
        android:fontFamily="@font/heraclito_medium"
        android:text="@string/allow"
        android:textAllCaps="false"
        android:textSize="@dimen/Text.12"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cancel_btn"
        app:layout_constraintTop_toBottomOf="@id/body_text" />

</androidx.constraintlayout.widget.ConstraintLayout>