<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_for_arrow_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_for_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.57" />

    <ImageView
        android:id="@+id/root_background_iv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/background"
        app:layout_constraintBottom_toTopOf="@id/guideline_for_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <yin_kio.toolbar.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:title_text="@string/boost_title_name" />

    <View
        android:id="@+id/view_for_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/card_corners_comet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.185"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <ImageView
        android:id="@+id/icon_is_done"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:src="@drawable/ic_is_done"
        app:layout_constraintStart_toStartOf="@id/view_for_background"
        app:layout_constraintTop_toTopOf="@id/view_for_background" />

    <TextView
        android:layout_marginBottom="@dimen/_5sdp"
        android:id="@+id/first_description_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:fontFamily="@font/heraclito_medium"
        android:textColor="@color/white"
        android:textSize="@dimen/Text.18"
        android:text="@string/released_F_gb"
        app:layout_constraintBottom_toTopOf="@id/second_description_tv"
        app:layout_constraintEnd_toEndOf="@id/view_for_background"
        app:layout_constraintStart_toEndOf="@id/icon_is_done"
        app:layout_constraintTop_toTopOf="@id/icon_is_done" />

    <TextView
        android:id="@+id/second_description_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:fontFamily="@font/heraclito_medium"
        android:textColor="@color/white"
        android:textSize="@dimen/Text.14"
        app:layout_constraintBottom_toBottomOf="@id/icon_is_done"
        app:layout_constraintEnd_toEndOf="@id/view_for_background"
        app:layout_constraintStart_toEndOf="@id/icon_is_done"
        app:layout_constraintTop_toBottomOf="@id/first_description_tv"
        tools:text="@string/boost_now_the_device_is_accelerated_by_D" />

    <TextView
        android:id="@+id/third_description_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:fontFamily="@font/heraclito_medium"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/Text.16"
        app:layout_constraintBottom_toBottomOf="@id/view_for_background"
        app:layout_constraintEnd_toEndOf="@id/view_for_background"
        app:layout_constraintStart_toStartOf="@id/view_for_background"
        app:layout_constraintTop_toBottomOf="@id/icon_is_done"
        tools:text="@string/available_memory_F_gb_F_gb" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_for_background"
        tools:itemCount="3"
        tools:listitem="@layout/item_menu_horizontal" />

</androidx.constraintlayout.widget.ConstraintLayout>