<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_for_arrow_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_for_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.57" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_for_top_second_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_for_bottom_second_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.51" />

    <ImageView
        android:id="@+id/root_background_iv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/background"
        app:layout_constraintBottom_toTopOf="@id/guideline_for_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/arrow_back_iv"
        android:layout_width="@dimen/_26sdp"
        android:layout_height="@dimen/_26sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintEnd_toStartOf="@id/title_tv"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_for_arrow_back"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:fontFamily="@font/heraclito_medium"
        android:text="@string/temperature_title"
        android:textColor="@color/white"
        android:textSize="@dimen/Text.24"
        app:layout_constraintBottom_toBottomOf="@id/arrow_back_iv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/arrow_back_iv"
        app:layout_constraintTop_toTopOf="@id/arrow_back_iv" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_optimize_is_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="optimize_is_done_background,icon_done_iv,description_is_done_tv" />

    <View
        android:id="@+id/optimize_is_done_background"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/card_corners_comet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/arrow_back_iv" />

    <ImageView
        android:id="@+id/icon_done_iv"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_16sdp"
        android:src="@drawable/ic_is_done"
        app:layout_constraintBottom_toBottomOf="@id/optimize_is_done_background"
        app:layout_constraintDimensionRatio="H,1"
        app:layout_constraintStart_toStartOf="@id/optimize_is_done_background"
        app:layout_constraintTop_toTopOf="@id/optimize_is_done_background" />

    <TextView
        android:id="@+id/description_is_done_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:fontFamily="@font/heraclito_medium"
        android:text="@string/temperature_checked"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="@id/optimize_is_done_background"
        app:layout_constraintEnd_toEndOf="@id/optimize_is_done_background"
        app:layout_constraintStart_toEndOf="@id/icon_done_iv"
        app:layout_constraintTop_toTopOf="@id/optimize_is_done_background" />

    <View
        android:id="@+id/first_view_for_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/card_corners_comet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.156"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/optimize_is_done_background"
        app:layout_goneMarginTop="@dimen/_24sdp" />

    <TextView
        android:id="@+id/description_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/heraclito_medium"
        android:text="@string/processor_temperature"
        android:textColor="@color/white"
        android:textSize="@dimen/Text.18"
        app:layout_constraintEnd_toEndOf="@id/first_view_for_background"
        app:layout_constraintStart_toStartOf="@id/first_view_for_background"
        app:layout_constraintTop_toTopOf="@id/first_view_for_background" />

    <TextView
        android:id="@+id/percent_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:fontFamily="@font/heraclito_medium"
        android:textColor="@color/white"
        android:textSize="@dimen/Text.18"
        app:layout_constraintStart_toStartOf="@id/first_view_for_background"
        app:layout_constraintTop_toBottomOf="@id/description_tv"
        tools:text="@string/temperature_D" />

    <ImageView
        android:id="@+id/icon_thermometer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:src="@drawable/ic_thermometer"
        app:layout_constraintBottom_toBottomOf="@id/percent_tv"
        app:layout_constraintDimensionRatio="W,1"
        app:layout_constraintHeight_percent="0.035"
        app:layout_constraintStart_toEndOf="@id/percent_tv"
        app:layout_constraintTop_toTopOf="@id/percent_tv" />


    <TextView
        android:id="@+id/normal_temperature_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:fontFamily="@font/heraclito_medium"
        android:text="@string/temperature_normal"
        android:textColor="@color/white"
        android:textSize="@dimen/Text.14"
        app:layout_constraintEnd_toEndOf="@id/first_view_for_background"
        app:layout_constraintStart_toStartOf="@id/first_view_for_background"
        app:layout_constraintTop_toBottomOf="@id/percent_tv" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/danger_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:clickable="false"
        android:fontFamily="@font/heraclito_medium"
        android:paddingHorizontal="@dimen/_12sdp"
        android:textAllCaps="false"
        android:textSize="@dimen/Text.16"
        android:gravity="start|center_horizontal"
        app:layout_constraintBottom_toTopOf="@id/boost_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/root_background_iv"
        app:layout_constraintVertical_bias="1"
        tools:background="@drawable/background_button_danger"
        tools:text="@string/temperature_danger_desc"
        tools:textColor="@color/red" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/boost_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:background="@drawable/background_button"
        android:fontFamily="@font/heraclito_medium"
        android:text="@string/temperature_check"
        android:textAllCaps="false"
        android:textSize="@dimen/Text.18"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>